; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_event/extr_event_send.c_esp_event_legacy_event_id.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_event/extr_event_send.c_esp_event_legacy_event_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WIFI_EVENT = common dso_local global i64 0, align 8
@IP_EVENT = common dso_local global i64 0, align 8
@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"invalid event base %s\00", align 1
@SYSTEM_EVENT_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i32)* @esp_event_legacy_event_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @esp_event_legacy_event_id(i64 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @WIFI_EVENT, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @esp_event_legacy_wifi_event_id(i32 %10)
  store i32 %11, i32* %3, align 4
  br label %24

12:                                               ; preds = %2
  %13 = load i64, i64* %4, align 8
  %14 = load i64, i64* @IP_EVENT, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %19

16:                                               ; preds = %12
  %17 = load i32, i32* %5, align 4
  %18 = call i32 @esp_event_legacy_ip_event_id(i32 %17)
  store i32 %18, i32* %3, align 4
  br label %24

19:                                               ; preds = %12
  %20 = load i32, i32* @TAG, align 4
  %21 = load i64, i64* %4, align 8
  %22 = call i32 @ESP_LOGE(i32 %20, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i64 %21)
  %23 = load i32, i32* @SYSTEM_EVENT_MAX, align 4
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %19, %16, %9
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @esp_event_legacy_wifi_event_id(i32) #1

declare dso_local i32 @esp_event_legacy_ip_event_id(i32) #1

declare dso_local i32 @ESP_LOGE(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
